# spillwords

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  acinclude.m4  config.h.in  configure  configure.in  configure.in.in
admin/: Doxyfile.global  acinclude.m4.in  cvs.sh
docs/: Makefile.in
docs/en/: Makefile.am  Makefile.in  spillwords-index-1.html  spillwords-index-2.html  spillwords-index-3.html  spillwords-index-4.html  spillwords-index-5.html  spillwords-index-6.html  spillwords-index.html  spillwords-index.sgml
m4/: aspell.m4  cygwin.m4
src/: Makefile.am  Makefile.in  SpillAI.cpp  SpillAI.h  SpillBoard.cpp  SpillBoard.h  SpillConfig.cpp  SpillConfig.h  SpillDictionary.cpp  SpillDictionary.h  SpillDie.cpp  SpillDie.h  SpillSplash.cpp  SpillSplash.h  Spillwords.h  aboutform.ui  aboutform.ui.h  cygwin_moc_types.cpp  dict.dct  main.cpp  mainform.ui  mainform.ui.h  messageform.ui  messageform.ui.h  netform.ui  netform.ui.h  optionsform.ui  optionsform.ui.h  playersform.ui  playersform.ui.h  scoresform.ui  scoresform.ui.h  spellcheckform.ui  spellcheckform.ui.h  spellform.ui  spellform.ui.h  spillwords.pro
src/images/: net.xpm  spillwords.xpm  splash.xpm  wood.xpm
