####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = spillwords-index.html spillwords-index-1.html spillwords-index-2.html spillwords-index-3.html spillwords-index-4.html spillwords-index-5.html spillwords-index-6.html 

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index.html $(prefix)/doc/src/spillwords-index.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-1.html $(prefix)/doc/src/spillwords-index-1.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-2.html $(prefix)/doc/src/spillwords-index-2.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-3.html $(prefix)/doc/src/spillwords-index-3.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-4.html $(prefix)/doc/src/spillwords-index-4.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-5.html $(prefix)/doc/src/spillwords-index-5.html
	$(mkinstalldirs) $(prefix)/doc/src/
	$(INSTALL_DATA) $(srcdir)/spillwords-index-6.html $(prefix)/doc/src/spillwords-index-6.html

uninstall-local:
	-rm -f $(prefix)/doc/src/spillwords-index.html
	-rm -f $(prefix)/doc/src/spillwords-index-1.html
	-rm -f $(prefix)/doc/src/spillwords-index-2.html
	-rm -f $(prefix)/doc/src/spillwords-index-3.html
	-rm -f $(prefix)/doc/src/spillwords-index-4.html
	-rm -f $(prefix)/doc/src/spillwords-index-5.html
	-rm -f $(prefix)/doc/src/spillwords-index-6.html

####### kdevelop will overwrite this part!!! (end)############
